feat: Add mixer (#10)
* feat: Add mixer feature

* chore: Bump version

* build: Fix allowlist

* chore(deps): Add once_cell

* feat: Migrate mixer module

* ci: Fix features on doc

* build: Fix to create build dir

* ci: Enforce test

* build: Add install

* build: Use status method

* build: Fix build process

build: Fix project file

build: Use configure on building SDL_ttf

build: Refactor build_vendor functions

build: Add retry

build: Fix return condition

build: Revert build of sdl2_ttf

build: Fix args

build: Fix sln name

build: Fix copying header

build: Prevent from duplicating dylibs

fix: Support windows on build_vendor_sdl2_mixer

ci: Improve jobs

build: Add vendored option

build: Use cmake on windows

build: Fix args form

build: Fix to checkout to version tag

build: Fix tag form

build: Fix to download vendored deps

build: Use cmake on windows

build: Use configure on other platforms

build: Fix arg for configure

chore: Add assertion

build: Fix to update submodule manually

Revert "chore: Add assertion"

This reverts commit 483e4cac4f75e1038c1ec515efb0a3aca9cb0126.

build: Use cmake to build

build: Add LDFLAGS env

build: Fix dir to install header

build: Improve cloning repo

build: Append DCMAKE_INSTALL_PREFIX

build: Fix args of cmake

build: Fix to install manually

build: Change Release into Debug

build: Fix envs

chore: Show files in Debug

build: Fix file name

build: Fix copy destination

chore: Show installed

build: Improve configure env

build: Use CPPFLAGS

build: Fix env into args

chore: Remove log

--- a/rich-sdl2-rust-sys/Cargo.toml
+++ b/rich-sdl2-rust-sys/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rich-sdl2-rust-sys"
-version = "0.2.3"
+version = "0.2.4"
 edition = "2021"
 description = "The sdl2 binding for Rust."
 repository = "https://github.com/MikuroXina/rich-sdl2-rust"
@@ -15,8 +15,10 @@ static = []
 dynamic = []
 vendor = []
 ttf = []
+mixer = []
 
 [build-dependencies]
 bindgen = "0.59.1"
 pkg-config = "0.3.22"
 git2 = "0.14.3"
+retry = "1.3.1"
