--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -39,15 +39,13 @@ jobs:
         if: matrix.os == 'windows-latest'
         run: echo "LIBCLANG_PATH=$((gcm clang).source -replace "clang.exe")" >> $env:GITHUB_ENV
 
-      - name: Build crate
-        run: cargo build --verbose --features vendor
-      - name: Clippy Check
-        run: cargo clippy --verbose --features vendor
       - name: Test crate
-        run: cargo test --verbose --features vendor
+        run: cargo test --verbose --features vendor,ttf,mixer
+      - name: Clippy Check
+        run: cargo clippy --verbose --features vendor,ttf,mixer
       - name: Create docs
         if: matrix.os == 'ubuntu-latest'
-        run: cargo +nightly doc --features vendor,nightly,vulkan,simd_allocator,ttf --no-deps
+        run: cargo +nightly doc --features vendor,nightly,vulkan,simd_allocator,ttf,mixer --no-deps
 
       - uses: actions/upload-artifact@v3
         if: matrix.os == 'ubuntu-latest'
