--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rich-sdl2-rust"
-version = "0.10.3"
+version = "0.10.4"
 authors = ["MikuroXina <ryosukadnak@gmail.com>"]
 edition = "2021"
 description = "The sdl2 wrapper for Rust."
@@ -17,6 +17,7 @@ vulkan = ["ash"]
 nightly = ["simd_allocator"]
 simd_allocator = []
 ttf = ["rich-sdl2-rust-sys/ttf"]
+mixer = ["rich-sdl2-rust-sys/mixer", "once_cell"]
 static = ["rich-sdl2-rust-sys/static"]
 dynamic = ["rich-sdl2-rust-sys/dynamic"]
 vendor = ["rich-sdl2-rust-sys/vendor"]
@@ -26,7 +27,8 @@ ash = { version = "0.33.0", optional = true }
 bitflags = "1.3.2"
 static_assertions = "1.1.0"
 typed-builder = "0.9.0"
-rich-sdl2-rust-sys = { path = "./rich-sdl2-rust-sys", version = "0.2.3" }
+rich-sdl2-rust-sys = { path = "./rich-sdl2-rust-sys", version = "0.2.4" }
+once_cell = { version = "1.13.0", optional = true }
 
 [workspace]
 members = ["rich-sdl2-rust-sys"]
