--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rich-sdl2-rust"
-version = "0.11.1"
+version = "0.11.2"
 authors = ["MikuroXina <ryosukadnak@gmail.com>"]
 edition = "2021"
 description = "The sdl2 wrapper for Rust."
@@ -32,3 +32,7 @@ once_cell = { version = "1.13.0", optional = true }
 
 [workspace]
 members = ["rich-sdl2-rust-sys"]
+
+[[example]]
+name = "simple-window"
+required-features = ["ttf"]
