--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,6 +29,7 @@ static_assertions = "1.1.0"
 typed-builder = "0.9.0"
 rich-sdl2-rust-sys = { path = "./rich-sdl2-rust-sys", version = "0.2.4" }
 once_cell = { version = "1.13.0", optional = true }
+raw-window-handle = "0.3.4"
 
 [workspace]
 members = ["rich-sdl2-rust-sys"]
