--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ rust-version = "1.56"
 [features]
 default = ["dynamic"]
 vulkan = ["ash"]
+wayland = []
 nightly = ["simd_allocator"]
 simd_allocator = []
 ttf = ["rich-sdl2-rust-sys/ttf"]
