--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ rust-version = "1.56"
 [features]
 default = ["dynamic"]
 vulkan = ["ash"]
+wayland = []
 nightly = ["simd_allocator"]
 simd_allocator = []
 ttf = ["rich-sdl2-rust-sys/ttf"]
@@ -29,6 +30,7 @@ static_assertions = "1.1.0"
 typed-builder = "0.9.0"
 rich-sdl2-rust-sys = { path = "./rich-sdl2-rust-sys", version = "0.2.4" }
 once_cell = { version = "1.13.0", optional = true }
+raw-window-handle = "0.3.4"
 
 [workspace]
 members = ["rich-sdl2-rust-sys"]
