--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ nightly = ["simd_allocator"]
 simd_allocator = []
 ttf = ["rich-sdl2-rust-sys/ttf"]
 mixer = ["rich-sdl2-rust-sys/mixer", "once_cell"]
+image = ["rich-sdl2-rust-sys/image"]
 static = ["rich-sdl2-rust-sys/static"]
 dynamic = ["rich-sdl2-rust-sys/dynamic"]
 vendor = ["rich-sdl2-rust-sys/vendor"]
@@ -28,7 +29,7 @@ ash = { version = "0.37.2", optional = true }
 bitflags = "1.3.2"
 static_assertions = "1.1.0"
 typed-builder = "0.11.0"
-rich-sdl2-rust-sys = { path = "./rich-sdl2-rust-sys", version = "0.2.6" }
+rich-sdl2-rust-sys = { path = "./rich-sdl2-rust-sys", version = "0.2.7" }
 once_cell = { version = "1.13.0", optional = true }
 raw-window-handle = "0.3.4"
 
