--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -49,6 +49,25 @@ jobs:
         if: matrix.os == 'windows-latest'
         run: echo "LIBCLANG_PATH=$((gcm clang).source -replace "clang.exe")" >> $env:GITHUB_ENV
 
+      - name: Cache LLVM and Clang (Linux)
+        if: matrix.os == 'ubuntu-latest'
+        id: cache-llvm
+        uses: actions/cache@v3
+        with:
+          path: ${{ runner.temp }}/llvm
+          key: llvm-16.0
+      - name: Install LLVM and Clang (Linux)
+        if: matrix.os == 'ubuntu-latest'
+        uses: KyleMayes/install-llvm-action@v1
+        with:
+          version: "16.0"
+          cached: ${{ steps.cache-llvm.outputs.cache-hit }}
+          directory: ${{ runner.temp }}/llvm
+      - name: Symlink libclang.so (Linux)
+        if: contains(matrix.os, 'ubuntu')
+        run: sudo ln -s libclang-16.so.1 /lib/x86_64-linux-gnu/libclang.so
+        working-directory: ${{ runner.temp }}/llvm
+
       - name: Test crate
         run: cargo test --verbose --features vendor,ttf,mixer
       - name: Clippy Check
