--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -3,7 +3,7 @@
   "extends": ["config:base", ":timezone(Asia/Tokyo)"],
   "semanticCommits": "enabled",
   "fetchReleaseNotes": true,
-  "enabledManagers": ["rust", "github-actions"],
+  "enabledManagers": ["cargo", "github-actions"],
   "schedule": ["on the first day of the week"],
   "commitMessagePrefix": "chore(deps): ",
   "dependencyDashboard": true,
