--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -9,7 +9,14 @@ jobs:
   release-please:
     runs-on: ubuntu-latest
     steps:
+      - id: token
+        uses: tibdex/github-app-token@v2
+        with:
+          app_id: ${{ secrets.HELPER_BOT_APP_ID }}
+          private_key: ${{ secrets.HELPER_BOT_PRIVATE_KEY }}
+
       - uses: google-github-actions/release-please-action@v3
         with:
+          token: ${{ steps.token.outputs.token }}
           release-type: rust
           package-name: rich-sdl2-rust
