--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -22,6 +22,22 @@ jobs:
           toolchain: nightly
           override: true
 
+      - name: Cache LLVM and Clang
+        id: cache-llvm
+        uses: actions/cache@v3
+        with:
+          path: ${{ runner.temp }}/llvm
+          key: llvm-16.0
+      - name: Install LLVM and Clang
+        uses: KyleMayes/install-llvm-action@v1
+        with:
+          version: "16.0"
+          cached: ${{ steps.cache-llvm.outputs.cache-hit }}
+          directory: ${{ runner.temp }}/llvm
+      - name: Symlink libclang.so
+        run: sudo ln -s libclang-16.so.1 /lib/x86_64-linux-gnu/libclang.so
+        working-directory: ${{ runner.temp }}/llvm
+
       - uses: katyo/publish-crates@v2
         with:
           path: ./rich-sdl2-rust-sys
