--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -75,6 +75,10 @@ jobs:
       - name: Create docs
         if: matrix.os == 'ubuntu-latest'
         run: cargo +nightly doc --features vendor,nightly,vulkan,simd_allocator,ttf,mixer --no-deps
+      - name: Publish test
+        if: matrix.os == 'ubuntu-latest'
+        working-directory: ./rich-sdl2-rust-sys
+        run: cargo publish --dry-run --features vendor
 
       - uses: actions/upload-artifact@v3
         if: matrix.os == 'ubuntu-latest'
