--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -33,7 +33,7 @@ jobs:
       - uses: lukka/get-cmake@latest
 
       - name: Nightly with rustfmt and clippy
-        uses: dtolnay/rust-toolchain@v1@v1
+        uses: dtolnay/rust-toolchain@v1
         with:
           toolchain: nightly
           components: rustfmt, clippy
