--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -65,6 +65,11 @@ jobs:
         if: contains(matrix.os, 'ubuntu')
         run: sudo ln -s libclang-16.so.1 /lib/x86_64-linux-gnu/libclang.so
         working-directory: ${{ runner.temp }}/llvm
+      - name: Install dependencies such as freetype
+        if: matrix.os == 'ubuntu-latest'
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y libfreetype6-dev
 
       - name: Install autoconf (macOS)
         if: contains(matrix.os, 'macos')
